--- a/style.css
+++ b/style.css
@@ -795,6 +795,10 @@ table th[class*="col-"] {
 }
 
 /*latest news*/
+.blog-post-section {
+  border: 1px solid #eee;
+  padding: 30px 25px 0px;
+}
 .news-sec {
   border: 1px solid #eee;
   color: #000;
@@ -982,6 +986,9 @@ table th[class*="col-"] {
 }
 .fa-envelope:before {
   content: "\f0e0";
+}
+.fa-user:before {
+  content: "\f007";
 }
 .fa-weixin:before {
   content: "\f1d7";
