--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
                 <li class="luxbar-item {% if page.category == 'home' %}active{% endif %}"><a data-title="首页" href="{{ site.url }}">首页</a></li>
                 <li class="luxbar-item {% if page.category == 'about' %}active{% endif %}"><a data-title="企业简介" href="{{ site.url }}/about/">企业简介</a></li>
                 <li class="luxbar-item {% if page.category == 'products' %}active{% endif %}"><a data-title="产品中心" href="{{ site.url }}/products/">产品中心</a></li>
+                <li class="luxbar-item {% if page.category == 'application' %}active{% endif %}"><a data-title="应用案例" href="{{ site.url }}/application/">行业应用</a></li>
                 <li class="luxbar-item {% if page.category == 'news' %}active{% endif %}"><a data-title="新闻中心" href="{{ site.url }}/news/">新闻中心</a></li>
                 <li class="luxbar-item {% if page.category == 'contact' %}active{% endif %}"><a data-title="联系我们" href="{{ site.url }}/contact/">联系我们</a></li>
               </ul>
