--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,9 +88,11 @@
     <mip-fixed type="gototop">
       <mip-gototop></mip-gototop>
     </mip-fixed>
+    <mip-stats-baidu token="b1d4cb05c1cb363ae515dc605f076b21"></mip-stats-baidu>
     <script src="https://c.mipcdn.com/static/v2/mip.js"></script>
     <script src="https://c.mipcdn.com/static/v2/mip-gototop/mip-gototop.js"></script>
     <script src="https://c.mipcdn.com/static/v2/mip-form/mip-form.js"></script>
     <script src="https://c.mipcdn.com/static/v2/mip-lightbox/mip-lightbox.js"></script>
+    <script src="https://c.mipcdn.com/static/v2/mip-stats-baidu/mip-stats-baidu.js"></script>
   </body>
 </html>
