--- a/_layouts/products-article.html
+++ b/_layouts/products-article.html
@@ -133,6 +133,20 @@ layout: pages
 <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
   <p>{{ page.weight }} KG</p>
 </div>
+<hr class="margin-btm-20">{% endif %}{% if page.image == 'hrd-868' %}{% else %}
+<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+  <p class="text-black"><b>锭数</b></p>
+</div>
+<div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
+  <p>10个头</p>
+</div>
+<hr class="margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+  <p class="text-black"><b>产量</b></p>
+</div>
+<div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
+  <p>单头3kg</p>
+</div>
 <hr class="margin-btm-20">{% endif %}
 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
   <p class="text-black"><b>产品用途</b></p>
